fixes images being stretched if they have a set height on them

--- a/src/assets/toolkit/styles/base.media.css
+++ b/src/assets/toolkit/styles/base.media.css
@@ -1,16 +1,18 @@
 /**
- * 1. Fluid images for responsive purposes.
- * 2. Offset `alt` text from surrounding copy.
- * 3. Setting `vertical-align` removes the whitespace that appears under `img`
+ * 1. In case the image has a set height on it
+ * 2. Fluid images for responsive purposes.
+ * 3. Offset `alt` text from surrounding copy.
+ * 4. Setting `vertical-align` removes the whitespace that appears under `img`
  *    elements when they are dropped into a page as-is. Safer alternative to
  *    using `display: block;`.
  *
  * from inuitcss
  */
 img {
-    max-width: 100%; /* 1 */
-    font-style: italic; /* 2 */
-    vertical-align: middle; /* 3 */
+	height: auto; /* 1 */
+    max-width: 100%; /* 2 */
+    font-style: italic; /* 3 */
+    vertical-align: middle; /* 4 */
 }
 
 /**
